<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScanSample</string>
    <string name="action_settings">Settings</string>

    <!-- Common Button Message -->
    <string name="txid_cmn_t_title">Scan Sample Application</string>
    <string name="txid_cmn_b_start">Start</string>
    <string name="txid_cmn_b_cancel">Cancel</string>
    <string name="txid_cmn_b_close">Close</string>
    <string name="txid_cmn_b_error">Error</string>
    <string name="txid_cmn_b_ok">OK</string>

    <!-- Scanner Status -->
    <string name="txid_scan_t_state_please_wait">Please Wait</string>
    <string name="txid_scan_t_state_ready">Ready</string>
    <string name="txid_scan_t_state_maintenance">Maintenance</string>
    <string name="txid_scan_t_state_scanning">Scanning&#8230;</string>
    <string name="txid_scan_t_state_stopped">Stopped</string>
    <string name="txid_scan_t_state_unknown">Unknown</string>
    <string name="txid_scan_t_state_reason_cover_open">Cover Open</string>
    <string name="txid_scan_t_state_reason_media_jam">Media Jam</string>
    <string name="txid_scan_t_state_reason_paused">Paused</string>
    <string name="txid_scan_t_state_reason_other">Other</string>
    <string name="txid_scan_t_state_severity_error">Error</string>
    <string name="txid_scan_t_state_severity_warning">Warning</string>

    <!-- Please Wait Dialog -->
    <string name="txid_cmn_d_wait">Please wait.</string>

    <!-- Boot Failed Dialog -->
    <string name="txid_cmn_d_cannot_connect">Cannot connect to the service.</string>

    <!-- Scanning Dialog -->
    <string name="txid_scan_d_scanning">Scanning&#8230;</string>
    <string name="txid_scan_d_canceling">Canceling&#8230;</string>
    <string name="txid_scan_d_sending">Sending&#8230;</string>
    <string name="txid_scan_d_count">%d pages</string>

    <!-- Destination Type  -->
    <string name="txid_scan_t_kind_title">Specify Destination</string>
    <string name="txid_scan_b_kind_folder">Folder</string>
    <string name="txid_scan_b_kind_to">Email (To)</string>
    <string name="txid_scan_b_address_address_book">Address Book</string>
    <string name="txid_scan_b_address_direct">Manual Entry</string>
    <string name="txid_scan_t_address_title_to">Specify Destination: Email (To)</string>
    <string name="txid_scan_t_address_title_cc">Specify Destination: Email (Cc)</string>
    <string name="txid_scan_t_address_title_bcc">Specify Destination: Email (Bcc)</string>
    <string name="txid_scan_t_address_title_folder">Specify Destination: Folder</string>

    <!-- Destination -->
    <string name="txid_dest_t_folder_manual_ftp">Folder (FTP)</string>
    <string name="txid_dest_t_folder_manual_smb">Folder (SMB)</string>
    <string name="txid_dest_t_folder_manual_ncp">Folder (NCP)</string>

    <!-- Addressbook -->
    <string name="txid_addressbook_t_title">Select from addressbook</string>
    <string name="txid_addressbook_b_switch_title">Switch Title</string>
    <string name="txid_addressbook_b_freqent">Freqent</string>

    <!-- Scan Color -->
    <string name="txid_scan_t_top_color_title">Scan Color</string>
    <string name="txid_scan_b_top_mono_text">B &amp; W (Text)</string>
    <string name="txid_scan_b_top_mono_text_photo">B &amp; W (Text/Photo)</string>
    <string name="txid_scan_b_top_mono_text_lineart">B &amp; W (Text/Line Art)</string>
    <string name="txid_scan_b_top_mono_photo">B &amp; W (Photo)</string>
    <string name="txid_scan_b_top_gray_scale">Gray Scale</string>
    <string name="txid_scan_b_top_full_color_text_photo">Full Color(Text/Photo)</string>
    <string name="txid_scan_b_top_full_color_glossy_photo">Full Color(Glossy Photo)</string>
    <string name="txid_scan_b_top_auto_color_select">Auto Color</string>

    <!-- File Type -->
    <string name="txid_scan_t_top_file_title">File Type</string>
    <string name="txid_scan_b_top_file_stiff_jpg">TIFF / JPEG (Single Page)</string>
    <string name="txid_scan_b_top_file_mtiff">TIFF (Multi-page)</string>
    <string name="txid_scan_b_top_file_spdf">PDF (Single Page)</string>
    <string name="txid_scan_b_top_file_mpdf">PDF (Multi-page)</string>

    <!-- Paper Side -->
    <string name="txid_scan_t_top_side_title">Original Side</string>
    <string name="txid_scan_b_top_one_sided">1 Sided</string>
    <string name="txid_scan_b_top_top_to_top">2 Sided: Tp to Tp</string>
    <string name="txid_scan_b_top_top_to_bottom">2 Sided: Tp to Btm</string>
    <string name="txid_scan_b_top_spread">Spread</string>

    <!-- Other -->
    <string name="txid_scan_t_top_other_title">Other Settings</string>
    <string name="txid_scan_b_other_preview_title">Show Preview</string>
    <string name="txid_scan_b_other_preview_on">On</string>
    <string name="txid_scan_b_other_preview_off">Off</string>

    <!-- CountDown -->
    <string name="txid_scan_t_count_down_title">Scanning</string>
    <string name="txid_scan_t_count_down_text">Set next original(s) within the %d sec., then press [Start]. If none, press [Finish].</string>
    <string name="txid_scan_t_no_count_down_text">Set next original(s), then press [Start]. If none, press [Finish].</string>
    <string name="txid_scan_b_count_down_start">Start</string>
    <string name="txid_scan_b_count_down_finish">Finish</string>

    <!--  Manual Input(Folder)  -->
    <string name="txid_dest_t_manual_input_folder_title">Manual Input(Folder)</string>
    <string name="txid_dest_b_manual_input_folder_ok">OK</string>
    <string name="txid_dest_b_manual_input_folder_cancel">Cancel</string>
	<string name="txid_dest_t_manual_input_folder_connect_protocol">Protocol</string>
    <string name="txid_dest_br_manual_input_folder_smb">SMB</string>
    <string name="txid_dest_br_manual_input_folder_ftp">FTP</string>
    <string name="txid_dest_br_manual_input_folder_ncp">NCP</string>
    <string name="txid_dest_t_manual_input_folder_server">Server</string>
    <string name="txid_dest_t_manual_input_folder_path">Path</string>
    <string name="txid_dest_t_manual_input_folder_user">User</string>
    <string name="txid_dest_t_manual_input_folder_pass">Password</string>
    <string name="txid_dest_t_manual_input_folder_port">Port</string>
    <string name="txid_dest_t_manual_input_folder_connect_type">Connection Type</string>
    <string name="txid_dest_t_manual_input_folder_connect_type_nds">NDS</string>
    <string name="txid_dest_t_manual_input_folder_connect_type_bindery">Bindery</string>

    <!--  Manual Input(Mail) -->
    <string name="txid_dest_t_manual_input_mail_title">Manual Input(Mail)</string>
    <string name="txid_dest_b_manual_input_mail_ok">OK</string>
    <string name="txid_dest_b_manual_input_mail_cancel">Cancel</string>
    <string name="txid_dest_t_manual_input_mail_address">Address</string>


</resources>
