<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- Folder Type -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200px"
            android:layout_height="50px"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txid_dest_t_manual_input_folder_connect_protocol"
            android:textSize="25px" />

        <RadioGroup
            android:id="@+id/radioGroup_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioBtn_smb"
                android:layout_width="120px"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/txid_dest_br_manual_input_folder_smb" />

            <RadioButton
                android:id="@+id/radioBtn_ftp"
                android:layout_width="120px"
                android:layout_height="wrap_content"
                android:text="@string/txid_dest_br_manual_input_folder_ftp" />

            <RadioButton
                android:id="@+id/radioBtn_ncp"
                android:layout_width="120px"
                android:layout_height="wrap_content"
                android:text="@string/txid_dest_br_manual_input_folder_ncp" />
        </RadioGroup>
    </LinearLayout>

    <!-- Server Name -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200px"
            android:layout_height="50px"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txid_dest_t_manual_input_folder_server"
            android:textSize="25px" />

        <EditText
            android:id="@+id/edit_server"
            android:layout_width="0dip"
            android:layout_height="50px"
            android:layout_weight="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:textSize="20px" />
    </LinearLayout>

    <!-- Port -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200px"
            android:layout_height="50px"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txid_dest_t_manual_input_folder_port"
            android:textSize="25px" />

        <EditText
            android:id="@+id/edit_port"
            android:layout_width="0dip"
            android:layout_height="50px"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="20px" />
    </LinearLayout>

    <!-- Path -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200px"
            android:layout_height="50px"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txid_dest_t_manual_input_folder_path"
            android:textSize="25px" />

        <EditText
            android:id="@+id/edit_path"
            android:layout_width="0dip"
            android:layout_height="50px"
            android:layout_weight="1"
            android:inputType="text"
            android:textSize="20px" />
    </LinearLayout>

    <!-- User Name -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200px"
            android:layout_height="50px"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txid_dest_t_manual_input_folder_user"
            android:textSize="25px" />

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="0dip"
            android:layout_height="50px"
            android:layout_weight="1"
            android:inputType="text"
            android:textSize="20px" />
    </LinearLayout>

    <!-- Password -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200px"
            android:layout_height="50px"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txid_dest_t_manual_input_folder_pass"
            android:textSize="25px" />

        <EditText
            android:id="@+id/edit_pass"
            android:layout_width="0dip"
            android:layout_height="50px"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textSize="20px" />
    </LinearLayout>

    <!-- Connection Type -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200px"
            android:layout_height="50px"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txid_dest_t_manual_input_folder_connect_type"
            android:textSize="25px" />

        <RadioGroup
            android:id="@+id/radioGroup_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioBtn_nds"
                android:layout_width="150px"
                android:layout_height="50px"
                android:checked="true"
                android:text="@string/txid_dest_t_manual_input_folder_connect_type_nds" />

            <RadioButton
                android:id="@+id/radioBtn_bindery"
                android:layout_width="150px"
                android:layout_height="50px"
                android:text="@string/txid_dest_t_manual_input_folder_connect_type_bindery" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>