<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400px"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_count_down"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:background="@drawable/border"
        android:text="@string/txid_scan_t_count_down_text"
        android:textSize="25px" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_count_down_start"
            android:layout_width="100px"
            android:layout_height="55px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50px"
            android:text="@string/txid_scan_b_count_down_start" />

        <Button
            android:id="@+id/btn_count_down_finish"
            android:layout_width="100px"
            android:layout_height="55px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="50px"
            android:text="@string/txid_scan_b_count_down_finish" />

    </RelativeLayout>

</LinearLayout>